--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,52 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.calculator {
+  margin: 10%;
+  width: 300px;
+  height: 450px;
+  background-color: rgb(98, 96, 96);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.result {
   color: white;
+  width: 100%;
+  height: 10%;
+  text-align: end;
+  padding: 5%;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+span {
+  display: inline-block;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+span,
+button {
+  width: 25%;
+  height: 16.8%;
+  background-color: rgb(206, 206, 205);
+  padding: 8%;
+  border: 0.5px solid rgb(157, 156, 156);
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.zero {
+  width: 50%;
+}
+
+.opperation {
+  background-color: rgb(255, 156, 27);
 }
