--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,17 @@
 .result {
   color: white;
   width: 100%;
-  height: 10%;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+.result p {
   text-align: end;
-  padding: 5%;
+  padding-top: 2%;
+  height: 100%;
+  margin: 0 5%;
+  font-size: 1.7rem;
 }
 
 button {
@@ -44,10 +52,10 @@ button {
 }
 
 span:active,
-button:active{
+button:active {
   font-size: 1.3rem;
   color: #fff;
-} 
+}
 
 .zero {
   width: 50%;
@@ -55,4 +63,5 @@ button:active{
 
 .opperation {
   background-color: rgb(255, 156, 27);
+  font-size: 1.5rem;
 }
