--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,8 @@ button:active {
   background-color: rgb(255, 156, 27);
   font-size: 1.5rem;
 }
+
+.minus {
+  font-size: 2.8rem;
+  padding: 0;
+}
