--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,22 @@
   text-align: center;
 }
 
+.body {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.989),
+    rgb(81, 80, 80)
+  );
+}
+
 .calculator {
+  border-radius: 10px;
   margin: 10%;
   width: 300px;
   height: 450px;
@@ -14,6 +29,8 @@
   display: flex;
   flex-wrap: wrap;
   text-align: center;
+  padding: 5px;
+  box-shadow: 1px 1px 40px 20px #1c1c1c;
 }
 
 .result {
@@ -26,7 +43,7 @@
 
 .result p {
   text-align: end;
-  padding-top: 2%;
+  padding-top: 5%;
   height: 100%;
   margin: 0 5%;
   font-size: 1.7rem;
@@ -44,11 +61,12 @@ span,
 button {
   width: 25%;
   height: 16.8%;
-  background-color: rgb(206, 206, 205);
+  background-color: rgba(206, 206, 205, 0.838);
   padding: 8%;
   border: 0.5px solid rgb(157, 156, 156);
   font-size: 1.2rem;
   font-weight: 700;
+  border-radius: 5px;
 }
 
 span:active,
@@ -67,6 +85,24 @@ button:active {
 }
 
 .minus {
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   padding: 0;
+}
+
+.quote {
+  font-size: 1.1rem;
+  font-weight: 300;
+  background-color: rgb(111, 110, 110);
+  max-width: 350px;
+  color: white;
+  padding: 3%;
+  border-radius: 10px;
+  box-shadow: 1px 1px 40px 20px #1c1c1c;
+}
+
+.quote p {
+  font-size: 0.9rem;
+  font-weight: 450;
+  text-align: end;
+  margin-bottom: 0;
 }
