--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,12 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.989),
-    rgb(81, 80, 80)
-  );
+  background:
+    linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.989),
+      rgb(81, 80, 80)
+    );
 }
 
 .calculator {
