--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,13 @@
 .result {
   color: white;
   width: 100%;
-  height: 15%;
+  height: 12%;
   display: flex;
   flex-direction: column;
+  background-color: rgba(128, 128, 128, 0.651);
+  margin: 2%;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .result p {
@@ -64,10 +68,10 @@ button {
   height: 16.8%;
   background-color: rgba(206, 206, 205, 0.838);
   padding: 8%;
-  border: 0.5px solid rgb(157, 156, 156);
+  border: 2px solid rgb(90, 89, 89);
   font-size: 1.2rem;
   font-weight: 700;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 span:active,
@@ -85,7 +89,7 @@ button:active {
   font-size: 1.5rem;
 }
 
-.minus {
+.minus, .dot {
   font-size: 2.5rem;
   padding: 0;
 }
