--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,16 @@ ul {
 .body {
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    to bottom,
-    rgba(112, 110, 110, 0.989),
-    rgb(37, 37, 37)
-  );
+  background:
+    linear-gradient(
+      to bottom,
+      rgba(112, 110, 110, 0.989),
+      rgb(37, 37, 37)
+    );
 }
 
 nav {
-  background-color: #000000;
+  background-color: #000;
   height: 15%;
   margin-bottom: 5%;
   justify-content: space-around;
